added recipe name to index

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Favorite Food Recipe</h1>
+    <h1>One Pot Fajita Chicken Mac n Cheese</h1>
+    <hr>
     <div id ="fav food">
         <p>Why is it your <b>favorite?</b></p>
+        <p>The one pot fajita chicken mac n cheese is one of my favorite recipes due <b>high protein</b> and <b>low calorie</b> content and amazing flavor!</p>
     </div>
     <div id ="Hyperlinks">
         <p>What ingredients do you <a href="ingredients.html">need</a>?</p>
         <p>Start <a href="directions.html">cooking</a>!</p>
     </div>
+    
 </body>
 </html>
