--- a/ingredients.html
+++ b/ingredients.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Ingredients to make ...</h1>
-    <div id="Ingredients">
+    <hr>
+    <div id="Ingredient_list">
         <ul>
             <li>ingredient</li>
             <li>ingredient</li>
