--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>One Pot Fajita Chicken Mac n Cheese</h1>
     <hr>
-    <div id ="fav food">
+    <div id ="fav_food">
         <p>Why is it your <b>favorite?</b></p>
         <p>The one pot fajita chicken mac n cheese is one of my favorite recipes due <b>high protein</b> and <b>low calorie</b> content and amazing flavor!</p>
     </div>
