--- a/directions.html
+++ b/directions.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Step by Step directions to make ...</h1>
+    <header>
+        <h1>Step by Step directions to make ...</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="ingredients.html">Ingredients</a></li>
+            <li><a href="index.html">Main menu</a></li>
+        </ul>
+    </nav>
     <hr>
     <div id="recipe">
         <ol>
@@ -16,10 +24,14 @@
             <li>Step 3:</li>
             <li>Step 4:</li>
         </ol>
+    </div>
         <div id ="Hyperlinks">
             <p>What ingredients do you <a href="ingredients.html">need</a>?</p>
             <p>Back to the <a href="index.html">menu</a>.</p>
         </div>
-    <div>
+     <footer>
+            <p>&copy; Favorite recipe</p>
+            <p> Ryan Panagrosso</p>
+    </footer>   
 </body>
 </html>
