--- a/index.html
+++ b/index.html
@@ -7,16 +7,28 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>One Pot Fajita Chicken Mac n Cheese</h1>
+    <header>
+        <h1>Favorite Recipe</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="ingredients.html">Ingredients</a></li>
+            <li><a href="directions.html">Step by Step</a></li>
+        </ul>
+    </nav>
     <hr>
     <div id ="fav_food">
-        <p>Why is it your <b>favorite?</b></p>
-        <p>The one pot fajita chicken mac n cheese is one of my favorite recipes due <b>high protein</b> and <b>low calorie</b> content and amazing flavor!</p>
-    </div>
+            <p>Why is it your <b>favorite?</b></p>
+            <p>The <b>insert name</b> is one of my favorite recipes due to its <b>high protein</b> and <b>low calorie</b> content and amazing flavor!</p>
+     </div>
     <div id ="Hyperlinks">
         <p>What ingredients do you <a href="ingredients.html">need</a>?</p>
         <p>Start <a href="directions.html">cooking</a>!</p>
     </div>
+    <footer>
+        <p>&copy; Favorite recipe</p>
+        <p> Ryan Panagrosso</p>
+    </footer>
     
 </body>
 </html>
