--- a/ingredients.html
+++ b/ingredients.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Ingredients to make ...</h1>
+    <Header>
+        <h1>Ingredients to make ...</h1>
+    </Header>
+    <nav>
+        <ul>
+            <li><a href="directions.html">Step by Step</a></li>
+            <li><a href="index.html">Main menu</a></li>
+        </ul>
+    </nav>
     <hr>
     <div id="Ingredient_list">
         <ul>
@@ -21,5 +29,9 @@
         <p>Start <a href="directions.html">cooking</a>!</p>
         <p>Back to the <a href="index.html">menu</a>.</p>
     </div>
+    <footer>
+        <p>&copy; Favorite recipe</p>
+        <p> Ryan Panagrosso</p>
+    </footer>
 </body>
 </html>
