--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>Start <a href="directions.html">cooking</a>!</p>
     </div>
     <footer>
-        <p>&copy; Favorite recipe</p>
+        <p>&copy; 2024 Favorite recipe</p>
         <p> Ryan Panagrosso</p>
     </footer>
     
