--- a/directions.html
+++ b/directions.html
@@ -25,12 +25,20 @@
             <li>Step 4:</li>
         </ol>
     </div>
+    <section id="nutrition">
+        <table>
+            <tr>
+                
+            </tr>
+
+        </table>
+    </section>
         <div id ="Hyperlinks">
             <p>What ingredients do you <a href="ingredients.html">need</a>?</p>
             <p>Back to the <a href="index.html">menu</a>.</p>
         </div>
      <footer>
-            <p>&copy; Favorite recipe</p>
+            <p>&copy; 2024 Favorite recipe</p>
             <p> Ryan Panagrosso</p>
     </footer>   
 </body>
