--- a/ingredients.html
+++ b/ingredients.html
@@ -30,7 +30,7 @@
         <p>Back to the <a href="index.html">menu</a>.</p>
     </div>
     <footer>
-        <p>&copy; Favorite recipe</p>
+        <p>&copy; 2024 Favorite recipe</p>
         <p> Ryan Panagrosso</p>
     </footer>
 </body>
