UI changes and added recipe and ingr

--- a/directions.html
+++ b/directions.html
@@ -8,37 +8,44 @@
 </head>
 <body>
     <header>
-        <h1>Step by Step directions to make ...</h1>
+        <h1>Panagrosso Family Lasagna</h1>
     </header>
     <nav>
         <ul>
-            <li><a href="ingredients.html">Ingredients</a></li>
             <li><a href="index.html">Main menu</a></li>
-        </ul>
+            <li><a href="ingredients.html">Ingredients</a></li>
+            <li><a href="directions.html">Step by Step</a></li>
+            <li><a href="form.html">Questions</a></li>
+          </ul>
     </nav>
     <hr>
-    <div id="recipe">
+    <section class="recipe">
         <ol>
-            <li>Step 1:</li>
-            <li>Step 2:</li>
-            <li>Step 3:</li>
-            <li>Step 4:</li>
+            <h2>Cooking the meat and sauce:</h2>
+            <li>In a skillet, add the meat and chopped onions with 2 Tbsp olive oil.</li>
+            <li>Season meat with the parsley, basil, pepper, oregano, garlic powder, sugar, and salt.</li>
+            <li>Cook over medium-high heat until meat is browned. Drain some of the fat grease.</li>
+            <li>In the large sauce, add in 2 cups of water, 16 oz of crushed tomatoes, and 6 oz of tomato paste.</li>
+            <li>While sauce cooks for 45 minutes, boil lasagna sheets until "al dente" (not overly cooked) and drain the water.</li>
+        </ol>
+           
+        <ol> 
+            <h2>Assembly:</h2>
+            <li>Add a light layer of sauce to the bottom of a baking pan.</li>
+            <li>Layer lasagna sheet on the bottom and spread cottage cheese, mozzarella, and sauce evenly.</li>
+            <li>Repeat ending with your sauce ontop. Cover with cheese and sprinkle parmesan genreously on top.</li>
+            <li>Either freeze or refridgerate for up to 2 days or oven bake immediately at 350-degrees for 30-45 minutes</li>
         </ol>
     </div>
-    <section id="nutrition">
+    <section class="nutrition">
         <table>
             <tr>
                 
             </tr>
-
         </table>
     </section>
-        <div id ="Hyperlinks">
-            <p>What ingredients do you <a href="ingredients.html">need</a>?</p>
-            <p>Back to the <a href="index.html">menu</a>.</p>
-        </div>
      <footer>
-            <p>&copy; 2024 Favorite recipe</p>
+            <p>&copy; 2024 Panagrosso Family Lasagna</p>
             <p> Ryan Panagrosso</p>
     </footer>   
 </body>
