--- a/index.html
+++ b/index.html
@@ -3,32 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Favorite Recipe</title>
+    <title>Panagrosso Family Lasagna</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Favorite Recipe</h1>
+        <h1>Panagrosso Family Lasagna</h1>
     </header>
     <nav>
         <ul>
+            <li><a href="index.html">Main menu</a></li>
             <li><a href="ingredients.html">Ingredients</a></li>
             <li><a href="directions.html">Step by Step</a></li>
+            <li><a href="form.html">Questions</a></li>
         </ul>
     </nav>
     <hr>
     <div id ="fav_food">
-            <p>Why is it your <b>favorite?</b></p>
-            <p>The <b>insert name</b> is one of my favorite recipes due to its <b>high protein</b> and <b>low calorie</b> content and amazing flavor!</p>
-     </div>
-    <div id ="Hyperlinks">
-        <p>What ingredients do you <a href="ingredients.html">need</a>?</p>
-        <p>Start <a href="directions.html">cooking</a>!</p>
+            <p>Get ready to savor the heartwarming flavors of the Panagrosso Family Lasagna!<br>
+                 This cherished family recipe has been passed down through generations, each layer of pasta, <b>rich meat sauce</b>, and <b>creamy cheese</b> bringing comfort and joy to every bite.<br>
+                  Perfect for gatherings or a cozy night in, this lasagna is a true testament to the love and care my mom puts into her cooking. Dive into this culinary delight and experience a taste of home.
+            </p>
+    </div>
+    <div class ="image-container">
+    <img src = "lasagna.jpg" alt="lasagna" class = "images">
     </div>
     <footer>
-        <p>&copy; 2024 Favorite recipe</p>
+        <p>&copy; 2024 Panagrosso Family Lasagna</p>
         <p> Ryan Panagrosso</p>
-    </footer>
-    
+    </footer> 
 </body>
 </html>
