--- a/ingredients.html
+++ b/ingredients.html
@@ -8,29 +8,43 @@
 </head>
 <body>
     <Header>
-        <h1>Ingredients to make ...</h1>
+        <h1>Panagrosso Family Lasagna</h1>
     </Header>
     <nav>
         <ul>
-            <li><a href="directions.html">Step by Step</a></li>
             <li><a href="index.html">Main menu</a></li>
-        </ul>
+            <li><a href="ingredients.html">Ingredients</a></li>
+            <li><a href="directions.html">Step by Step</a></li>
+            <li><a href="form.html">Questions</a></li>
+          </ul>
     </nav>
     <hr>
-    <div id="Ingredient_list">
-        <ul>
-            <li>ingredient</li>
-            <li>ingredient</li>
-            <li>ingredient</li>
-            <li>ingredient</li>
-        </ul>
-    </div>
-    <div id ="Hyperlinks">
-        <p>Start <a href="directions.html">cooking</a>!</p>
-        <p>Back to the <a href="index.html">menu</a>.</p>
+    <div id="ingrlist">
+        <h2>What You'll need!</h2>
+        <div class="container">
+            <ul class="column_list">
+                <li>1 lb. ground beef or sausage</li>
+                <li>3/4 c. chopped onion</li>
+                <li>2 Tbsp olive oil</li>
+                <li>16 oz. can crushed tomatoes</li>
+                <li>6 oz. cans tomato paste</li>
+                <li>2 c. water</li>
+                <li>Tbsp parsley</li>
+                <li>2 tsp salt</li>
+                <li>1 tsp sugar</li>
+                <li>1 tsp garlic powder</li>
+                <li>1/2 tsp pepper</li>
+                <li>1/2 tsp oregano</li>
+                <li>1/2 tsp basil</li>
+                <li>lasagna sheets</li>
+                <li>cottage cheese</li>
+                <li>parmesan cheese</li>
+                <li>mozzarella cheese</li>
+            </ul>
+        </div>
     </div>
     <footer>
-        <p>&copy; 2024 Favorite recipe</p>
+        <p>&copy; 2024 Panagrosso Family Lasagna</p>
         <p> Ryan Panagrosso</p>
     </footer>
 </body>
