--- a/directions.html
+++ b/directions.html
@@ -20,90 +20,100 @@
     </nav>
     <hr>
     <section class="recipe">
-        <ol>
+        <ol style = "margin: 20px">
             <h2>Cooking the meat and sauce:</h2>
             <li>In a skillet, add the meat and 3/4 cup of chopped onions with 2 Tbsp olive oil.</li>
-            <li>Season meat with 1 Tbsp parsley, 1/2 tsp basil, 1/2 tsp pepper, 1/2 tsp oregano, 1 tsp garlic powder, 1 tsp sugar, and 2 tsp salt.</li>
+            <li>Season meat with 1 Tbsp parsley, 1/2 tsp basil, 1/2 tsp pepper,<br>
+                 1/2 tsp oregano, 1 tsp garlic powder, 1 tsp sugar, and 2 tsp salt.</li>
             <li>Cook over medium-high heat until meat is browned. Drain some of the fat grease.</li>
             <li>In the large sauce, add in 2 cups of water, 16 oz of crushed tomatoes, and 6 oz of tomato paste.</li>
             <li>While sauce cooks for 45 minutes, boil lasagna sheets until "al dente" (not overly cooked) and drain the water.</li>
-        </ol>
-           
-        <ol> 
+        </ol>  
+        <ol style = "margin:20px">
             <h2>Assembly:</h2>
             <li>Add a light layer of sauce to the bottom of a baking pan.</li>
             <li>Layer lasagna sheet on the bottom and spread cottage cheese, mozzarella, and sauce evenly.</li>
             <li>Repeat ending with your sauce ontop. Cover with cheese and sprinkle parmesan genreously on top.</li>
             <li>Either freeze or refridgerate for up to 2 days or oven bake immediately at 350-degrees for 30-45 minutes</li>
         </ol>
-        <p>Creates ~8 servings.</p>
-    </div>
+    </section>
     <section class="nutrition">
-        <table>
-            <h2>Estimated Nutrition:</h2>
-            <tr>
-                <th>Ingredients</th>
-                <th>Calories</th>
-                <th>Protein (g)</th>
-                <th>Fat (g)</th>
-                <th>Carbohydrates (g)</th>
-            </tr>
-            <tr>
-                <td> Ground Beef</td>
-                <td> 960</td>
-                <td> 88</td>
-                <td> 64</td>
-                <td> 0</td>
-            </tr>
-            <tr>
-                <td> Onions</td>
-                <td> 34</td>
-                <td> 1</td>
-                <td> 0</td>
-                <td> 8</td>
-            </tr>
-            <tr>
-                <td> Olive oil</td>
-                <td> 240</td>
-                <td> 0</td>
-                <td> 28</td>
-                <td> 0</td>
-            </tr>
-            <tr>
-                <td> Tomatoes</td>
-                <td> 130</td>
-                <td> 7</td>
-                <td> 1</td>
-                <td> 28</td>
-            </tr>
-            <tr>
-                <td> Tomato paste</td>
-                <td> 150</td>
-                <td> 7</td>
-                <td> 1</td>
-                <td> 32</td>
-            </tr>
-            <tr>
-                <td> Lasagna sheet</td>
-                <td> 1600</td>
-                <td> 56</td>
-                <td> 8</td>
-                <td> 312</td>
-            </tr>
-            <tr>
-                <td> Cheeses</td>
-                <td> 1512</td>
-                <td> 144</td>
-                <td> 86</td>
-                <td> 16</td>
-            </tr>
-            <tr>
-                <td> Total</td>
-                <td> 4660</td>
-                <td> 303</td>
-                <td> 188</td>
-                <td> 404</td>
-            </tr>
+        <table class ="nutr_table">
+            <thead>
+                <tr class="titlerow">
+                    <th colspan="5"><h2>Estimated Nutrition:</h2></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>Ingredients</th>
+                    <th>Calories</th>
+                    <th>Protein (g)</th>
+                    <th>Fat (g)</th>
+                    <th>Carbohydrates (g)</th>
+                </tr>
+                <tr>
+                    <td> Ground Beef</td>
+                    <td> 960</td>
+                    <td> 88</td>
+                    <td> 64</td>
+                    <td> 0</td>
+                </tr>
+                <tr>
+                    <td> Onions</td>
+                    <td> 34</td>
+                    <td> 1</td>
+                    <td> 0</td>
+                    <td> 8</td>
+                </tr>
+                <tr>
+                    <td> Olive oil</td>
+                    <td> 240</td>
+                    <td> 0</td>
+                    <td> 28</td>
+                    <td> 0</td>
+                </tr>
+                <tr>
+                    <td> Tomatoes</td>
+                    <td> 130</td>
+                    <td> 7</td>
+                    <td> 1</td>
+                    <td> 28</td>
+                </tr>
+                <tr>
+                    <td> Tomato paste</td>
+                    <td> 150</td>
+                    <td> 7</td>
+                    <td> 1</td>
+                    <td> 32</td>
+                </tr>
+                <tr>
+                    <td> Lasagna sheet</td>
+                    <td> 1600</td>
+                    <td> 56</td>
+                    <td> 8</td>
+                    <td> 312</td>
+                </tr>
+                <tr>
+                    <td> Cheeses</td>
+                    <td> 1512</td>
+                    <td> 144</td>
+                    <td> 86</td>
+                    <td> 16</td>
+                </tr>
+                <tr>
+                    <td> Total</td>
+                    <td> 4660</td>
+                    <td> 303</td>
+                    <td> 188</td>
+                    <td> 404</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan ="5"><h4>Recipe makes ~8 servings</h4></td>
+                </tr>
+            </tfoot>
         </table>
     </section>
     <footer>
