--- a/ingredients.html
+++ b/ingredients.html
@@ -43,6 +43,9 @@
             </ul>
         </div>
     </div>
+    <div class ="ingred-container">
+        <img src = "ingred.jpg" alt="ingred" class = "ingred">
+    </div>
     <footer>
         <p>&copy; 2024 Panagrosso Family Lasagna</p>
         <p> Ryan Panagrosso</p>
