--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </nav>
     <hr>
     <div id ="fav_food">
-            <p>Get ready to savor the heartwarming flavors of the Panagrosso Family Lasagna!<br>
-                 This cherished family recipe has been passed down through generations, each layer of pasta, <b>rich meat sauce</b>, and <b>creamy cheese</b> bringing comfort and joy to every bite.<br>
+            <p>Get ready to savor the heartwarming flavors of the <br><b>Panagrosso Family Lasagna!</b><br>
+                 This cherished family recipe has been passed down through generations. Each layer of pasta, <b>rich meat sauce</b>, and <b>creamy cheese</b> brings comfort and joy to every bite.<br>
                   Perfect for gatherings or a cozy night in, this lasagna is a true testament to the love and care my mom puts into her cooking. Dive into this culinary delight and experience a taste of home.
             </p>
     </div>
