--- a/ingredients.html
+++ b/ingredients.html
@@ -20,7 +20,7 @@
     </nav>
     <hr>
     <div id="ingrlist">
-        <h2>What You'll need!</h2>
+        <h2>What you'll need!</h2>
         <div class="container">
             <ul class="column_list">
                 <li>1 lb. ground beef or sausage</li>
