--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </p>
     </div>
     <div class ="image-container">
-        <img src = "lasagna.jpg" alt="lasagna" class = "images">
+        <img src = "lasagna.jpg" alt="lasagna" class = "lasagnaimg">
     </div>
     <footer>
         <p>&copy; 2024 Panagrosso Family Lasagna</p>
