--- a/directions.html
+++ b/directions.html
@@ -27,14 +27,14 @@
                  1/2 tsp oregano, 1 tsp garlic powder, 1 tsp sugar, and 2 tsp salt.</li>
             <li>Cook over medium-high heat until meat is browned. Drain some of the fat grease.</li>
             <li>In the large sauce, add in 2 cups of water, 16 oz of crushed tomatoes, and 6 oz of tomato paste.</li>
-            <li>While sauce cooks for 45 minutes, boil lasagna sheets until "al dente" (not overly cooked) and drain the water.</li>
+            <li>While sauce cooks for 45 minutes, boil lasagna sheets until "al dente" (not overly cooked) <br>and drain the water.</li>
         </ol>  
         <ol style = "margin: 20px">
             <h2>Assembly:</h2>
             <li>Add a light layer of sauce to the bottom of a baking pan.</li>
             <li>Layer lasagna sheet on the bottom and spread cottage cheese, mozzarella, and sauce evenly.</li>
-            <li>Repeat ending with your sauce ontop. Cover with cheese and sprinkle parmesan genreously on top.</li>
-            <li>Either freeze or refridgerate for up to 2 days or oven bake immediately at 350-degrees for 30-45 minutes</li>
+            <li>Repeat ending with your sauce ontop. Cover with cheese and sprinkle parmesan generously on top.</li>
+            <li>Either freeze or refridgerate for up to 2 days or oven bake immediately at 350-degrees for 45-60 minutes.</li>
         </ol>
     </section>
     <section class="nutrition">
