--- a/directions.html
+++ b/directions.html
@@ -11,6 +11,7 @@
         <h1>Panagrosso Family Lasagna</h1>
     </header>
     <nav>
+        <!--links in the nav bar-->
         <ul>
             <li><a href="index.html">Main menu</a></li>
             <li><a href="ingredients.html">Ingredients</a></li>
@@ -19,6 +20,7 @@
           </ul>
     </nav>
     <hr>
+    <!--creates cooking steps in its own section-->
     <section class="recipe">
         <ol style = "margin: 20px">
             <h2>Cooking the meat and sauce:</h2>
@@ -37,6 +39,7 @@
             <li>Either freeze or refridgerate for up to 2 days or oven bake immediately at 350-degrees for 45-60 minutes.</li>
         </ol>
     </section>
+    <!--add in a nutrition table with 5 rows for most ingredients-->
     <section class="nutrition">
         <table class ="nutr_table">
             <thead>
