--- a/form.html
+++ b/form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!--turns the resize of text box off-->
 <style>
     textarea{
         resize:none;
@@ -16,6 +17,7 @@
         <h1>Panagrosso Family Lasagna</h1>
     </header>
     <nav>
+        <!--links in the nav bar-->
         <ul>
             <li><a href="index.html">Main menu</a></li>
             <li><a href="ingredients.html">Ingredients</a></li>
@@ -24,6 +26,7 @@
          </ul>
     </nav>
     <hr>
+    <!--creates the section for the text submissions-->
     <section id="reviews">
         <div class="form.container">
             <div class="form-container">
