--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Panagrosso Family Lasagna</h1>
     </header>
     <nav>
+        <!--links in the nav bar-->
         <ul>
             <li><a href="index.html">Main menu</a></li>
             <li><a href="ingredients.html">Ingredients</a></li>
