--- a/ingredients.html
+++ b/ingredients.html
@@ -11,6 +11,7 @@
         <h1>Panagrosso Family Lasagna</h1>
     </Header>
     <nav>
+        <!--links in the nav bar-->
         <ul>
             <li><a href="index.html">Main menu</a></li>
             <li><a href="ingredients.html">Ingredients</a></li>
@@ -19,6 +20,7 @@
           </ul>
     </nav>
     <hr>
+    <!--ingredient list-->
     <div id="ingrlist">
         <h2>What you'll need!</h2>
         <div class="container">
