--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Panagrosso Family Lasagna</h1>
+        <h1><span style="color: rgb(41, 193, 41);">Panagrosso </span> Family <span style="color: red;">Lasagna</span></span></h1>
     </header>
     <nav>
         <!--links in the nav bar-->
