--- a/directions.html
+++ b/directions.html
@@ -29,6 +29,7 @@
                  1/2 tsp oregano, 1 tsp garlic powder, 1 tsp sugar, and 2 tsp salt.</li>
             <li>Cook over medium-high heat until meat is browned. Drain some of the fat grease.</li>
             <li>In the large sauce, add in 2 cups of water, 16 oz of crushed tomatoes, and 6 oz of tomato paste.</li>
+            <li>Add in the meat to your sauce and mix.</li>
             <li>While sauce cooks for 45 minutes, boil lasagna sheets until "al dente" (not overly cooked) <br>and drain the water.</li>
         </ol>  
         <ol style = "margin: 20px">
